# strands-location-service-weather

./: .gitignore  LICENSE  MCP_SETUP.md  README.md  __init__.py  config.toml  location_weather.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml
.kiro/steering/: development.md  infrastructure.md  performance.md  product.md  structure.md  tech.md
docs/: cdk-deployment-guide.md  error-handling-implementation.md  guardrails-best-practices.md  mcp-setup.md  opentelemetry-mcp-alignment.md  tool-integration-best-practices.md
infrastructure/: README.md  __init__.py  app.py  build_lambda_layers.py  cdk.json  deploy.py  lambda_deployment_guide.md  requirements.txt
infrastructure/cdk_lib/: __init__.py  bedrock_construct.py  lambda_construct.py  location_construct.py
infrastructure/constructs/: __init__.py  bedrock_construct.py  lambda_construct.py
infrastructure/lambda_functions/: README.md
infrastructure/schemas/: location_action_group.json  validation_report.md  weather_action_group.json
infrastructure/stacks/: agentcore_stack.py  bedrock_agent_stack.py
src/strands_location_service_weather/: __init__.py  agentcore_schemas.py  bedrock_agent_schemas.py  config.py  error_handling.py  fallback_mechanisms.py  guardrails.py  location_weather.py  main.py  mcp_server.py  (+5 more)
tests/: conftest.py  test_agentcore_schemas.py  test_bedrock_agent_schemas.py  test_config.py  test_error_handling.py  test_fallback_mechanisms.py  test_guardrails.py  test_infrastructure_complete.py  test_integration.py  test_lambda_functions.py  test_lambda_handler.py  test_location_weather_client.py  test_mcp_server.py  test_model_factory.py  test_model_factory_essential.py  test_multi_mode_integration.py  test_multimode_functionality.py  test_openapi_schemas.py  test_otel_best_practices.py  test_performance.py  test_tool_integration.py  test_tool_manager.py  test_weather_tools.py
(+12 files in other folders)
