[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-location-service-weather"
version = "0.1.0"
description = "Location-based weather information service using Amazon Location Service and Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "requests>=2.28.0",
    "boto3>=1.28.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.40b0",
    "opentelemetry-instrumentation-requests>=0.40b0",
    "fastmcp>=0.1.0",
    "tomli>=2.0.0; python_version<'3.11'",
    # CDK dependencies for infrastructure
    "aws-cdk-lib>=2.150.0",
    "constructs==10.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]

[project.scripts]
location-weather = "strands_location_service_weather.main:main"
location-weather-mcp = "strands_location_service_weather.mcp_server:run_mcp_server"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top (needed for OpenTelemetry setup)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["strands_location_service_weather"]
